Resolves: tdf#122467 drop down field name is too narrow

ellipise only when we have to

Change-Id: I79820dc84fc9ac0a755700c70bca9edbb14cf371
Reviewed-on: https://gerrit.libreoffice.org/66001
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>